<resources>
    <string name="app_name">My Note Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="note1">content1</string>
    <string name="note2">content2</string>
    <string name="note3">content3</string>
    <string name="note4">content4</string>
    <string name="note5">content5</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="main">main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fragment_navigation">Navigation</string>
    <string name="settings">Srttings</string>
    <string name="share">Share</string>
    <string name="favourite">Favourite</string>
    <string name="contentDescription">ADD</string>
    <string name="dialogTitle">Attention</string>
    <string name="dialogMessage">Do you really want to delete this message?</string>
    <string name="ok">yes</string>
    <string name="dialogMessageClear">Do you want to clear all notes?</string>
</resources>