<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app = "http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search"
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="5"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        />

    <item
        android:title="@string/add"
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/delete"
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="20"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/main"
        android:id="@+id/action_main"
        android:icon="@drawable/ic_action_star"
        android:orderInCategory="30"
        app:showAsAction="always"
        />

</menu>