<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/favourite"
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_action_favourite"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/settings"
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="15"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/share"
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        />

</menu>